# sak

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/design/: stats-telemetry.md
src/: duration.rs  main.rs  output.rs  test_support.rs  value.rs
src/cert/: expiring.rs  from_kubeconfig.rs  from_yaml.rs  hook.rs  inspect.rs  mod.rs
src/cert/testdata/: sak-test.pem
src/config/: convert.rs  diff.rs  exists.rs  flatten.rs  grep.rs  hook.rs  keys.rs  length.rs  mod.rs  paths.rs  query.rs  schema.rs  type_.rs  validate.rs
src/csv/: headers.rs  mod.rs  query.rs  stats.rs  validate.rs
src/docker/: client.rs  config.rs  hook.rs  images.rs  info.rs  list.rs  logs.rs  mod.rs
src/fs/: cut.rs  duplicates.rs  find.rs  glob.rs  grep.rs  head.rs  hook.rs  largest.rs  mod.rs  read.rs  size.rs  stat.rs  tail.rs  tree.rs  wc.rs
src/gh/: api.rs  argv.rs  client.rs  hook.rs  issue_list.rs  issue_view.rs  mod.rs  pr_list.rs  pr_view.rs  release_list.rs  release_view.rs  render.rs  repo_view.rs  run_list.rs  run_view.rs  workflow_list.rs
src/git/: blame.rs  branch.rs  contributors.rs  diff.rs  hook.rs  log.rs  mod.rs  remote.rs  show.rs  stash.rs  status.rs  tags.rs
src/hash/: hook.rs  mod.rs
src/helm/: client.rs  dependency_list.rs  get.rs  history.rs  hook.rs  lint.rs  list.rs  mod.rs  repo_list.rs  search.rs  show.rs  status.rs  template.rs
src/hook/: claude_code.rs  mod.rs  rule.rs  tests.rs
src/json/: diff.rs  exists.rs  flatten.rs  grep.rs  hook.rs  keys.rs  length.rs  mod.rs  paths.rs  query.rs  schema.rs  select.rs  type_.rs  validate.rs
src/k8s/: client.rs  containers.rs  contexts.rs  describe.rs  discovery.rs  env.rs  events.rs  failing.rs  get.rs  hook.rs  images.rs  kinds.rs  logs.rs  mod.rs  not_ready.rs  pending.rs  restarts.rs  schema.rs
src/linux/: cpuinfo.rs  hook.rs  loadavg.rs  meminfo.rs  mod.rs  mounts.rs  network.rs  process.rs  sysctl.rs  uptime.rs
src/loki/: client.rs  common_args.rs  label_values.rs  labels.rs  mod.rs  query.rs  range.rs  runner.rs  series.rs
src/lxc/: client.rs  config.rs  hook.rs  images.rs  info.rs  list.rs  mod.rs
src/nix/: client.rs  derivation_show.rs  eval.rs  flake_metadata.rs  flake_show.rs  hook.rs  mod.rs  path_info.rs  profile_list.rs  references.rs  registry_list.rs  store_info.rs
src/prom/: alerts.rs  am.rs  client.rs  common_args.rs  duration.rs  flags.rs  histogram.rs  label_values.rs  labels.rs  metadata.rs  mod.rs  output.rs  prom_config.rs  query.rs  range.rs  rules.rs  runner.rs  series.rs  targets.rs  tsdb.rs
src/sqlite/: client.rs  count.rs  dump.rs  hook.rs  info.rs  mod.rs  query.rs  schema.rs  tables.rs
src/talos/: certs.rs  client.rs  config.rs  get.rs  hook.rs  mod.rs  read.rs
src/value/: diff.rs  mod.rs  path.rs  walk.rs
