[package]
name = "sak"
version = "0.6.0"
edition = "2024"
description = "Swiss Army Knife for LLMs - read-only file operations"

[[bin]]
name = "sak"
path = "src/main.rs"

[features]
# `k8s` is part of the default feature set so `cargo install sak` ships the
# full domain. It pulls in kube + k8s-openapi + tokio + http, which roughly
# doubles the release binary (~3.4 MB → ~6.4 MB) and roughly doubles cold
# link time. If you want the lean build (no Kubernetes, no async runtime,
# no OpenAPI generated code), opt out explicitly:
#
#     cargo build --release --no-default-features
#
# The `k8s` feature can also be re-added on its own without enabling other
# (currently nonexistent) optional features:
#
#     cargo build --release --no-default-features --features k8s
default = ["k8s"]
k8s = ["dep:kube", "dep:k8s-openapi", "dep:tokio", "dep:http"]
# `sqlite` is opt-in (not in `default`) until binary-size and build-time impact
# are measured. Pulls in `rusqlite` with the `bundled` feature, which compiles
# libsqlite3 from source — first build is slower, no system dep needed.
sqlite = ["dep:rusqlite"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
globset = "0.4"
walkdir = "2"
regex = "1"
anyhow = "1"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
plist = "1.6"
# k8s domain (opt-in via the `k8s` feature). Minimal feature sets:
# - kube: client + rustls-tls only; no runtime, derive, ws, oauth, oidc, gzip
# - k8s-openapi: pinned to a single API version (never `latest`)
# - tokio: current-thread runtime only; no rt-multi-thread
kube = { version = "3", default-features = false, features = ["client", "rustls-tls", "ring"], optional = true }
k8s-openapi = { version = "0.27", default-features = false, features = ["v1_33"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "macros"], optional = true }
# `http` is needed by `client::request_text` to construct raw GET requests for
# the OpenAPI v3 endpoint that `sak k8s schema` walks. kube re-exports its own
# http internals but not the public types we need, so we declare it directly.
http = { version = "1", optional = true }
# sqlite domain (opt-in via the `sqlite` feature). `bundled` compiles
# libsqlite3 from source so there's no system libsqlite dep at runtime or
# build time. Read-only enforcement is OS-level via SQLITE_OPEN_READ_ONLY +
# `PRAGMA query_only=ON`, plus a chokepoint grep test in src/sqlite/client.rs.
rusqlite = { version = "0.32", default-features = false, features = ["bundled"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
strip = true
