[package]
name = "sak"
version = "0.7.5"
edition = "2024"
description = "Swiss Army Knife for LLMs - read-only file operations"

[[bin]]
name = "sak"
path = "src/main.rs"

[features]
# `k8s`, `lxc`, and `docker` are part of the default feature set so
# `cargo install sak` ships the full domain. They pull in kube + k8s-openapi
# (for k8s) and hyper + hyperlocal + hyper-util + http-body-util (shared
# between lxc and docker), plus the shared tokio + http stack. Together they
# roughly triple the release binary and cold link time vs the lean build. If
# you want the lean build (no Kubernetes, no LXD/Incus, no Docker, no async
# runtime), opt out explicitly:
#
#     cargo build --release --no-default-features
#
# Any single domain can also be re-added on its own:
#
#     cargo build --release --no-default-features --features k8s
#     cargo build --release --no-default-features --features lxc
#     cargo build --release --no-default-features --features docker
default = ["k8s", "lxc", "docker"]
k8s = ["dep:kube", "dep:k8s-openapi", "dep:tokio", "dep:http"]
# `lxc` talks to the LXD/Incus REST API over a unix domain socket via raw
# hyper + hyperlocal. Read-only enforcement is convention + a chokepoint grep
# test in src/lxc/client.rs that mirrors the k8s pattern.
lxc = ["dep:hyper", "dep:hyperlocal", "dep:hyper-util", "dep:http-body-util", "dep:tokio", "dep:http"]
# `docker` talks to the Docker daemon REST API over a unix domain socket via
# raw hyper + hyperlocal. Shares the same hyper stack as lxc; the two domains
# remain separate because their response shapes differ (Docker has no envelope,
# LXD does). Read-only enforcement mirrors the lxc pattern via a chokepoint
# grep test in src/docker/client.rs.
docker = ["dep:hyper", "dep:hyperlocal", "dep:hyper-util", "dep:http-body-util", "dep:tokio", "dep:http"]
# `sqlite` is opt-in (not in `default`) until binary-size and build-time impact
# are measured. Pulls in `rusqlite` with the `bundled` feature, which compiles
# libsqlite3 from source — first build is slower, no system dep needed.
sqlite = ["dep:rusqlite", "dep:base64"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
globset = "0.4"
walkdir = "2"
regex = "1"
anyhow = "1"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
plist = "1.6"
# k8s domain (opt-in via the `k8s` feature). Minimal feature sets:
# - kube: client + rustls-tls only; no runtime, derive, ws, oauth, oidc, gzip
# - k8s-openapi: pinned to a single API version (never `latest`)
# - tokio: current-thread runtime only; no rt-multi-thread
kube = { version = "3", default-features = false, features = ["client", "rustls-tls", "ring"], optional = true }
k8s-openapi = { version = "0.27", default-features = false, features = ["v1_33"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "macros"], optional = true }
# `http` is needed by `client::request_text` to construct raw GET requests for
# the OpenAPI v3 endpoint that `sak k8s schema` walks. kube re-exports its own
# http internals but not the public types we need, so we declare it directly.
http = { version = "1", optional = true }
# lxc domain (opt-in via the `lxc` feature). Talks to LXD/Incus over a unix
# domain socket. hyperlocal provides the UnixConnector; hyper-util provides
# the legacy Client builder; http-body-util provides Full<Bytes> request bodies
# and BodyExt::collect for response bodies.
hyper = { version = "1", default-features = false, features = ["client", "http1"], optional = true }
hyperlocal = { version = "0.9", optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
# sqlite domain (opt-in via the `sqlite` feature). `bundled` compiles
# libsqlite3 from source so there's no system libsqlite dep at runtime or
# build time. Read-only enforcement is OS-level via SQLITE_OPEN_READ_ONLY +
# `PRAGMA query_only=ON`, plus a chokepoint grep test in src/sqlite/client.rs.
rusqlite = { version = "0.32", default-features = false, features = ["bundled"], optional = true }
# `base64` is used by `sak sqlite query` (and the dump command that shares its
# row-formatting helpers) to render BLOB cells as base64 strings in both JSON
# and TSV output. Gated on the `sqlite` feature so non-sqlite builds stay
# unchanged.
base64 = { version = "0.22", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
strip = true
