[package]
name = "sak"
version = "0.11.0"
edition = "2024"
description = "Swiss Army Knife for LLMs - read-only file operations"

[[bin]]
name = "sak"
path = "src/main.rs"

[features]
# `k8s`, `lxc`, `docker`, `sqlite`, and `prom` are part of the default feature
# set so `cargo install sak` ships every domain. They pull in kube +
# k8s-openapi (for k8s), hyper + hyperlocal + hyper-util + http-body-util
# (shared between lxc and docker), rusqlite with bundled libsqlite3 (for
# sqlite), ureq + rustls (for prom), plus the shared tokio + http stack
# (k8s/lxc/docker only — prom is synchronous and pulls no tokio). Together
# they roughly triple the release binary and cold link time vs the lean
# build, and the bundled libsqlite3 adds C compile time on the first build.
# If you want the lean build (no Kubernetes, no LXD/Incus, no Docker, no
# SQLite, no Prometheus, no async runtime), opt out explicitly:
#
#     cargo build --release --no-default-features
#
# Any single domain can also be re-added on its own:
#
#     cargo build --release --no-default-features --features k8s
#     cargo build --release --no-default-features --features lxc
#     cargo build --release --no-default-features --features docker
#     cargo build --release --no-default-features --features sqlite
#     cargo build --release --no-default-features --features prom
default = ["k8s", "lxc", "docker", "sqlite", "prom"]
k8s = ["dep:kube", "dep:k8s-openapi", "dep:tokio", "dep:http"]
# `lxc` talks to the LXD/Incus REST API over a unix domain socket via raw
# hyper + hyperlocal. Read-only enforcement is convention + a chokepoint grep
# test in src/lxc/client.rs that mirrors the k8s pattern.
lxc = [
    "dep:hyper",
    "dep:hyperlocal",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tokio",
    "dep:http",
]
# `docker` talks to the Docker daemon REST API over a unix domain socket via
# raw hyper + hyperlocal. Shares the same hyper stack as lxc; the two domains
# remain separate because their response shapes differ (Docker has no envelope,
# LXD does). Read-only enforcement mirrors the lxc pattern via a chokepoint
# grep test in src/docker/client.rs.
docker = [
    "dep:hyper",
    "dep:hyperlocal",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tokio",
    "dep:http",
]
# `sqlite` pulls in `rusqlite` with the `bundled` feature, which compiles
# libsqlite3 from source — first build is slower, no system dep needed at
# runtime. Read-only enforcement is OS-level (`SQLITE_OPEN_READ_ONLY`) plus
# `PRAGMA query_only=ON` plus a chokepoint grep test in src/sqlite/client.rs,
# which is strictly stronger than the convention-only k8s/lxc/docker pattern.
sqlite = ["dep:rusqlite"]
# `prom` talks to a Prometheus or Alertmanager HTTP API over TCP+TLS using
# `ureq` (blocking) with rustls. Unlike `lxc`/`docker`, which speak unix
# sockets, the prom domain hits remote endpoints, so hyper + hyperlocal is
# not a fit; ureq keeps the prom domain synchronous (no tokio) and brings
# in a small rustls stack. Read-only enforcement is convention + a chokepoint
# grep test in src/prom/client.rs mirroring the k8s/lxc/docker pattern.
prom = ["dep:ureq"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
globset = "0.4"
walkdir = "2"
regex = "1"
anyhow = "1"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
plist = "1.6"
# cert domain (always on — pure Rust, no native deps, no network). x509-parser
# brings nom + asn1-rs + oid-registry for ASN.1/DER decoding; sha2 is used for
# fingerprints; base64 (also used by `sqlite`) is needed to strip the base64
# wrapping on `client-certificate-data` style fields. The combined footprint
# is on the order of `serde_yaml`, so this lives alongside json/config rather
# than behind an opt-in cargo feature.
x509-parser = "0.16"
sha2 = "0.10"
base64 = { version = "0.22", default-features = false, features = ["std"] }
# k8s domain (opt-in via the `k8s` feature). Minimal feature sets:
# - kube: client + rustls-tls only; no runtime, derive, ws, oauth, oidc, gzip
# - k8s-openapi: pinned to a single API version (never `latest`)
# - tokio: current-thread runtime only; no rt-multi-thread
kube = { version = "3", default-features = false, features = [
    "client",
    "rustls-tls",
    "ring",
], optional = true }
k8s-openapi = { version = "0.27", default-features = false, features = [
    "v1_33",
], optional = true }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "macros",
], optional = true }
# `http` is needed by `client::request_text` to construct raw GET requests for
# the OpenAPI v3 endpoint that `sak k8s schema` walks. kube re-exports its own
# http internals but not the public types we need, so we declare it directly.
http = { version = "1", optional = true }
# lxc domain (opt-in via the `lxc` feature). Talks to LXD/Incus over a unix
# domain socket. hyperlocal provides the UnixConnector; hyper-util provides
# the legacy Client builder; http-body-util provides Full<Bytes> request bodies
# and BodyExt::collect for response bodies.
hyper = { version = "1", default-features = false, features = [
    "client",
    "http1",
], optional = true }
hyperlocal = { version = "0.9", optional = true }
hyper-util = { version = "0.1", default-features = false, features = [
    "client-legacy",
    "http1",
    "tokio",
], optional = true }
http-body-util = { version = "0.1", optional = true }
# sqlite domain (opt-in via the `sqlite` feature). `bundled` compiles
# libsqlite3 from source so there's no system libsqlite dep at runtime or
# build time. Read-only enforcement is OS-level via SQLITE_OPEN_READ_ONLY +
# `PRAGMA query_only=ON`, plus a chokepoint grep test in src/sqlite/client.rs.
rusqlite = { version = "0.32", default-features = false, features = [
    "bundled",
], optional = true }
# prom domain (opt-in via the `prom` feature). Blocking HTTP+TLS to a remote
# Prometheus or Alertmanager API. `default-features = false` strips gzip /
# brotli / cookies / charset (none of which Prometheus needs); we keep `tls`
# (rustls + webpki-roots) so HTTPS endpoints work. Response bodies are
# parsed via `serde_json::from_str` so ureq's optional `json` feature is
# unnecessary.
ureq = { version = "2", default-features = false, features = [
    "tls",
], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
strip = true
